// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link default 1`] = `
.c0 {
  color: black;
}

.c0:visited {
  color: black;
}

.c1 {
  height: 1em;
  margin: 0 0.5em;
  vertical-align: top;
}

<span>
  <a
    className="c0"
    color="black"
    href="/"
    target="_blank"
  >
    test link
  </a>
  <img
    alt="link icon"
    className="c1"
    height="1em"
    src="/images/link.png"
  />
</span>
`;

exports[`Link overrides 1`] = `
.c0 {
  color: blue;
}

.c0:visited {
  color: purple;
}

.c1 {
  height: 0.5em;
  margin: 0;
  vertical-align: top;
}

<span>
  <a
    className="c0"
    color="blue"
    href="/"
    target="_self"
  >
    test link
  </a>
  <img
    alt="link icon"
    className="c1"
    height="0.5em"
    src="/images/link.png"
  />
</span>
`;
